--- a/src/components/WorkCard.module.css
+++ b/src/components/WorkCard.module.css
@@ -74,23 +74,28 @@
 }*/
 
 .learnMoreButton {
-    align-self: flex-start;
-    display: inline-flex;
-    align-items: center;
-    background: #8558DB;
-    border: 1px solid #8558DB;
-    color: none;
-    padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
-    font-weight: 600;
-    text-decoration: none;
-    transition: background-color 0.2s, color 0.2s;
-    cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  padding: 10px 18px;
+  background-color: #8558DB; 
+  color: white;              
+  border-radius: 8px;
+  font-weight: 600;
+  transition: all 0.2s ease;
+  text-decoration: none;
 }
 
-.learnMoreButton:hover {
+/*.learnMoreButton:hover {
     background-color: #8558DB;
     color: white;
+}*/
+
+.learnMoreButton:hover {
+  background-color: #9970E5; 
+  color: white;              
+  transform: scale(1.03);    
+  cursor: pointer;
 }
 
 .learnMoreButton svg {
